add ramp up period

--- a/Binky.Tests/Binky.Tests.csproj
+++ b/Binky.Tests/Binky.Tests.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="values_preloaded_in_cache.cs" />
     <Compile Include="values_not_in_cache.cs" />
+    <Compile Include="values_updated_in_cache.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
