add factory to cache builder

--- a/Binky.Tests/Binky.Tests.csproj
+++ b/Binky.Tests/Binky.Tests.csproj
@@ -43,6 +43,7 @@
     <Compile Include="values_preloaded_in_cache.cs" />
     <Compile Include="values_not_in_cache.cs" />
     <Compile Include="values_updated_in_cache.cs" />
+    <Compile Include="update_value_factory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
