--- a/Binky.Tests/Binky.Tests.csproj
+++ b/Binky.Tests/Binky.Tests.csproj
@@ -44,6 +44,7 @@
     <Compile Include="values_not_in_cache.cs" />
     <Compile Include="values_updated_in_cache.cs" />
     <Compile Include="update_value_factory.cs" />
+    <Compile Include="old_values_in_cache.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
